# system_design

./: .gitignore  README.md
Homework 1/: hw  (+4 more)
project_1/: BSM.cpp  BSM.h  CMakeLists.txt  CSVReader.cpp  CSVReader.h  README.md  RealDeltaHedging.cpp  RealDeltaHedging.h  StdNormal.cpp  StdNormal.h  StockPriceSimulator.cpp  StockPriceSimulator.h  UnitTest.cpp  UnitTest.h  Utils.cpp  Utils.h  main  main.cpp  tests
project_1/results/graphics/: 100_stock_simulations.html  100_stock_simulations_option_prices.html  hedging_error_distribution.html
project_1/results/stock_simulations/: stock_simulation_1.csv  stock_simulation_10.csv  stock_simulation_100.csv  stock_simulation_1000.csv  stock_simulation_101.csv  stock_simulation_102.csv  stock_simulation_103.csv  stock_simulation_104.csv  stock_simulation_105.csv  stock_simulation_106.csv  stock_simulation_107.csv  stock_simulation_108.csv  stock_simulation_109.csv  stock_simulation_11.csv  stock_simulation_110.csv  stock_simulation_111.csv  stock_simulation_112.csv  stock_simulation_113.csv  stock_simulation_114.csv  stock_simulation_115.csv  stock_simulation_116.csv  stock_simulation_117.csv  stock_simulation_118.csv  stock_simulation_119.csv  stock_simulation_12.csv  stock_simulation_120.csv  stock_simulation_121.csv  stock_simulation_122.csv  stock_simulation_123.csv  stock_simulation_124.csv  stock_simulation_125.csv  stock_simulation_126.csv  stock_simulation_127.csv  stock_simulation_128.csv  stock_simulation_129.csv  stock_simulation_13.csv  stock_simulation_130.csv  stock_simulation_131.csv  stock_simulation_132.csv  (+961 more)
(+23 files in other folders)
